--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="row">
         <div class="column">
-            <a href="./2020/">
+            <a href="https://cultureplot.com/dem-drop-out-contest/">
                 <div class="link_card">
                     <h3>2020 Democratic Primary</h3>
                     <img src="img/heatmap.png">
